/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package gwtypes;

option go_package = "github.com/wesleywu/gowing/protobuf/gwtypes";
option java_package = "gowing.protobuf.gwtypes";
option java_outer_classname = "WrappersProto";
option java_multiple_files = true;

import "google/protobuf/any.proto";

// Wrapper message for array of `double`.
//
// The JSON representation for `DoubleSlice` is JSON array of numbers.
message DoubleSlice {
  // The double value.
  repeated double value = 1;
}

// Wrapper message for array of `float`.
//
// The JSON representation for `FloatSlice` is JSON array of numbers.
message FloatSlice {
  // The float value.
  repeated float value = 1;
}

// Wrapper message for array of `int64`.
//
// The JSON representation for `Int64Slice` is JSON array of numbers.
message Int64Slice {
  // The int64 value.
  repeated int64 value = 1;
}

// Wrapper message for array of `uint64`.
//
// The JSON representation for `UInt64Slice` is JSON array of numbers.
message UInt64Slice {
  // The uint64 value.
  repeated uint64 value = 1;
}

// Wrapper message for array of `int32`.
//
// The JSON representation for `Int32Slice` is JSON array of numbers.
message Int32Slice {
  // The int32 value.
  repeated int32 value = 1;
}

// Wrapper message for array of `uint32`.
//
// The JSON representation for `UInt32Slice` is JSON array of numbers.
message UInt32Slice {
  // The uint32 value.
  repeated uint32 value = 1;
}

// Wrapper message for array of `bool`.
//
// The JSON representation for `BoolSlice` is JSON array of `true` and `false` strings.
message BoolSlice {
  // The bool value.
  repeated bool value = 1;
}

// Wrapper message for array of `string`.
//
// The JSON representation for `StringSlice` is JSON array of strings.
message StringSlice {
  // The string value.
  repeated string value = 1;
}

enum OperatorType {
    EQ = 0;
    NE = 1;
    GT = 2;
    GTE = 3;
    LT = 4;
    LTE = 5;
    Like = 6;
    NotLike = 7;
    Null = 8;
    NotNull = 9;
}

enum MultiType {
    Exact = 0;
    Between = 1;
    NotBetween = 2;
    In = 3;
    NotIn = 4;
}

enum WildcardType {
    None = 0;
    Contains = 1;
    StartsWith = 2;
    EndsWith = 3;
}

message Condition {
    OperatorType operator = 1;
    MultiType multi = 2;
    WildcardType wildcard = 3;
    google.protobuf.Any value = 4;
}